styling for index page

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css" type="text/css" />
 </head>
+
 <body>
-  <h1>Welcome to Egg</h1>
-  <h3></h3>
+        <div class="jumbotron">
+          <div class="opacityDiv">
+            <h1 id="landingH1">Welcome to Egg</h1>
+            <p>A private network file sharing service</p>
+            <p><a class="btn btn-primary btn-lg center" href="#" role="button">Login</a></p>
+          </div>
+        </div>
+
 </body>
+
 </html>
