added egg and changed css to - case over camel case

--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,16 @@
 </head>
 
 <body>
-        <div class="jumbotron">
-          <div class="opacityDiv">
-            <h1 id="landingH1">Welcome to Egg</h1>
+    <div class="jumbotron">
+        <div class="opacity-div">
+            <h1 id="landing-h1">Welcome to EggPi</h1>
             <p>A private network file sharing service</p>
-            <p><a class="btn btn-primary btn-lg center" href="#" role="button">Login</a></p>
-          </div>
+            <p><a class="btn btn-primary btn-lg center" href="signin.html" role="button">Sign In</a></p>
+            <div class="egg-img-div">
+                <img id="eggImg" src="../egg.png">
+            </div>
         </div>
+    </div>
 
 </body>
 
