--- a/public/signup.html
+++ b/public/signup.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>EGGPiFS | Egg Pi File Storage</h1>
+    <h1><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
     <div class="container">
 
         <div class="signup-container">
@@ -25,7 +25,7 @@
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
                 <label for="inputPassword" class="sr-only">Password</label>
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                
+
                 <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
             </form>
 
