fixed file paths of images to public/images

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
             <p>A private network file sharing service</p>
             <p><a class="btn btn-primary btn-lg center" href="signin.html" role="button">Sign In</a></p>
             <div class="egg-img-div">
-                <img id="eggImg" src="../egg.png">
+                <img id="eggImg" src="images/egg.png">
             </div>
         </div>
     </div>
