--- a/public/signin.html
+++ b/public/signin.html
@@ -42,7 +42,8 @@
 
     </div>
     <!-- /container -->
-
+    <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
+    <script src="js/signin.js"></script>
 
 </body>
 
