add index.js and logic to pull file data for table

--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -27,7 +27,7 @@
                         <th>Date Uploaded</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="table">
                     <tr>
                         <th scope="row">1</th>
                         <td>dinky.jpg</td>
