--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -40,7 +40,8 @@
         </div>
     </div>
     <!-- /container -->
-
+    <script type="text/javascript" src="js/vendors/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
 
 </body>
 
