sign in successful

--- a/public/signin.html
+++ b/public/signin.html
@@ -17,7 +17,7 @@
 
         <div class="signin-container">
 
-            <form class="form-signin">
+            <form id="signin" class="form-signin">
                 <h2 class="form-signin-heading">Please sign in</h2>
                 <label for="inputEmail" class="sr-only">Email address</label>
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
@@ -28,7 +28,12 @@
               <input type="checkbox" value="remember-me"> Remember me
             </label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <!-- <button class="btn btn-lg btn-primary btn-block" type="submit"name="action">
+                  Sign in
+                </button> -->
+                <button id = "signin-btn" class="btn btn-lg btn-primary btn-block" type="submit" name="action">
+                  Sign in
+                </button>
             </form>
 
         </div>
