--- a/public/signup.html
+++ b/public/signup.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
 
+
     <title>sign-up page</title>
 </head>
 
@@ -26,7 +27,7 @@
                 <label for="inputPassword" class="sr-only">Password</label>
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <button id="signup-btn" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
             </form>
 
         </div>
@@ -40,7 +41,8 @@
 
     </div>
     <!-- /container -->
-
+    <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
+    <script src="js/signup.js"></script>
 
 </body>
 
