--- a/public/signup.html
+++ b/public/signup.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="css/vendors/materialize.min.css"> -->
+    <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendors/toastr.min.css">
+
 
 
     <title>sign-up page</title>
@@ -27,7 +30,7 @@
                 <label for="inputPassword" class="sr-only">Password</label>
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
 
-                <button id="signup-btn" class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <button id="signup-btn" class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
             </form>
 
         </div>
@@ -42,6 +45,10 @@
     </div>
     <!-- /container -->
     <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
+    <!-- <script type="text/javascript" src="js/vendors/materialize.min.js"></script> -->
+    <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/vendors/toastr.min.js"></script>
+
     <script src="js/signup.js"></script>
 
 </body>
