add toastr to sign in page, and clean up comments, change bootstrap js/css call to min local file

--- a/public/signin.html
+++ b/public/signin.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendors/toastr.min.css">
     <link href="css/style.css" rel="stylesheet">
 
     <title>sign-in page</title>
@@ -28,9 +29,6 @@
               <input type="checkbox" value="remember-me"> Remember me
             </label>
                 </div>
-                <!-- <button class="btn btn-lg btn-primary btn-block" type="submit"name="action">
-                  Sign in
-                </button> -->
                 <button id = "signin-btn" class="btn btn-lg btn-primary btn-block" type="submit" name="action">
                   Sign in
                 </button>
@@ -48,6 +46,8 @@
     </div>
     <!-- /container -->
     <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/vendors/toastr.min.js"></script>
     <script src="js/signin.js"></script>
 
 </body>
