--- a/public/signin.html
+++ b/public/signin.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/vendors/toastr.min.css">
 
     <title>sign-in page</title>
 </head>
@@ -48,6 +49,7 @@
     </div>
     <!-- /container -->
     <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/vendors/toastr.min.js"></script>
     <script src="js/signin.js"></script>
 
 </body>
