re-purpose uploads.category for the download path to be used in file download links, clean up uploads table

--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -21,17 +21,13 @@
                 <thead class="thead-inverse">
                     <tr>
                         <th>Name</th>
-                        <th>Category</th>
                         <th>Username</th>
                         <th>Date Uploaded</th>
                     </tr>
                 </thead>
                 <tbody id="table">
                     <tr>
-                        <td>dinky.jpg</td>
-                        <td>Image</td>
-                        <td>eggbert47</td>
-                        <td>12/12/2015 12:23:00</td>
+                        <!-- first tr for append to work in js -->
                     </tr>
                 </tbody>
             </table>
