--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -12,11 +12,10 @@
 </head>
 
 <body>
-    <h1 class="col-xs-6 col-sm-6"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
-    <h1 class="col-xs-6 col-sm-6"><a href="get_eggs.html">Upload Files</a></h1>
-    <div class="container">
-
-        <div class="signup-container">
+    <h1 class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
+    <h1 class="col-md-4"><a href="get_eggs.html">Upload Files</a></h1>
+    <div class="container table-parent">
+        <div class="signup-container scroll col-md-6">
             <table class="table table-striped">
                 <thead class="thead-inverse">
                     <tr>
