--- a/public/get_eggs.html
+++ b/public/get_eggs.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>File Uploader - coligo.io</title>
-  <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <title>File Uploader</title>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
+  <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
 
   <link href="css/style.css" rel="stylesheet">
 
@@ -19,9 +19,8 @@
       <div class="col-xs-12">
         <div class="panel panel-default">
           <div class="panel-body">
-            <span class="glyphicon glyphicon-cloud-upload"></span>
+            <!-- <span class="glyphicon glyphicon-cloud-upload"></span> -->
             <h2>File Uploader</h2>
-            <h4>coligo.io</h4>
             <div class="progress">
               <div class="progress-bar" role="progressbar"></div>
             </div>
@@ -35,7 +34,7 @@
   <input id="upload-input" type="file" name="uploads[]" multiple="multiple"></br>
 
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
   <script src="js/upload.js"></script>
 </body>
 </html>
