--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 
@@ -21,7 +21,7 @@
             </div>
         </div>
     </div>
-
+  <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
 </body>
 
 </html>
