--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
 
     <title>User Landing Page</title>
@@ -34,6 +34,7 @@
     </div>
     <!-- /container -->
     <script type="text/javascript" src="js/vendors/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </body>
 
