--- a/public/signin.html
+++ b/public/signin.html
@@ -14,7 +14,8 @@
 </head>
 
 <body>
-    <h1><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
+    <h1 class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
+    
     <div class="container">
 
         <div class="signin-container">
