--- a/public/get_eggs.html
+++ b/public/get_eggs.html
@@ -13,25 +13,23 @@
 
 </head>
 <body>
-
-  <div class="container">
+  <h1 class="col-md-8"><a href="user-landing.html">EGGPiFS</a> | Egg Pi File Storage</h1>
+  <div class="container upload-container">
     <div class="row">
       <div class="col-xs-12">
         <div class="panel panel-default">
           <div class="panel-body">
-            <!-- <span class="glyphicon glyphicon-cloud-upload"></span> -->
             <h2>File Uploader</h2>
             <div class="progress">
               <div class="progress-bar" role="progressbar"></div>
             </div>
-            <button class="btn btn-lg upload-btn" type="button">Upload File</button>
+            <input id="upload-input" type="file" name="uploads[]" multiple="multiple">
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <input id="upload-input" type="file" name="uploads[]" multiple="multiple"></br>
 
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
