styling on upload page

--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -13,7 +13,7 @@
 
 <body>
     <h1 class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
-    <h1 class="col-md-4"><a href="get_eggs.html">Upload Files</a></h1>
+    <h1 class="col-md-4"><a href="get_eggs.html">Upload Eggs <img src="images/eggs.png"></a></h1>
     <div class="container table-parent">
         <div class="signup-container scroll col-md-6">
             <table class="table table-striped">
