index page 'about' section

--- a/public/index.html
+++ b/public/index.html
@@ -11,17 +11,38 @@
 </head>
 
 <body>
-    <div class="jumbotron">
-        <div class="opacity-div">
-            <h1 id="landing-h1">Welcome to EggPi</h1>
-            <p>A private network file sharing service</p>
-            <p><a class="btn btn-primary btn-lg center" href="signin.html" role="button">Sign In</a></p>
-            <div class="egg-img-div">
-                <img id="eggImg" src="images/egg.png">
-            </div>
+      <div class="jumbotron">
+          <div class="opacity-div">
+              <h1 id="landing-h1">Welcome to EggPi</h1>
+              <p>A private network file sharing service</p>
+              <p><a class="btn btn-primary btn-lg center" href="signin.html" role="button">Sign In</a></p>
+              <div class="egg-img-div">
+                  <img id="eggImg" src="images/egg.png">
+              </div>
+          </div>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-3">
+          </div>
+          <div class="black-text info col-sm-6">
+            <h2>About EggPi</h2>
+            <p>EggPi is a site designed to allow users to easily share files with eachother locally, without reqiuring an internet connection. using a raspberry pi.</p>
+          </div>
+          <div class="col-sm-3">
+          </div>
         </div>
-    </div>
-  <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
+        <div class="row">
+          <div class="col-sm-3">
+          </div>
+          <div class="black-text info col-sm-6">
+            <h2>Github</h2>
+            <p><a href="https://github.com/StephenHanzlik/q2pi">Link to the github repository</a></p>
+          </div>
+          <div class="col-sm-3">
+          </div>
+        </div>
+      </div>
 </body>
 
 </html>
