--- a/public/get_eggs.html
+++ b/public/get_eggs.html
@@ -21,6 +21,7 @@
           <div class="panel-body">
             <!-- <span class="glyphicon glyphicon-cloud-upload"></span> -->
             <h2>File Uploader</h2>
+            <h4>coligo.io</h4>
             <div class="progress">
               <div class="progress-bar" role="progressbar"></div>
             </div>
