added nav bar styling to all pages

--- a/public/signup.html
+++ b/public/signup.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
     <h1 class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
+  </nav>
 
     <div class="container">
 
