--- a/public/get_eggs.html
+++ b/public/get_eggs.html
@@ -13,7 +13,9 @@
 
 </head>
 <body>
+  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
   <h1 class="col-md-8"><a href="user-landing.html">EGGPiFS</a> | Egg Pi File Storage</h1>
+</nav>
   <div class="container upload-container">
     <div class="row">
       <div class="col-xs-12">
