--- a/public/signin.html
+++ b/public/signin.html
@@ -14,8 +14,9 @@
 </head>
 
 <body>
+  <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
     <h1 class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
-    
+  </nav>
     <div class="container">
 
         <div class="signin-container">
