add css 'about' page, contributors, github repo link

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
           </div>
       </div>
       <div class="container">
-        <div class="row">
+        <div class="row info-row">
           <div class="col-sm-3">
           </div>
           <div class="black-text info col-sm-6">
@@ -32,11 +32,27 @@
           <div class="col-sm-3">
           </div>
         </div>
-        <div class="row">
+
+        <div class="row info-row">
+          <div class="col-sm-3">
+          </div>
+          <div class="black-text  info col-sm-6">
+            <h2>Contributors</h2>
+            <div class = "contributors">
+            <img class="contribution-pic" src="images/chris.jpg" alt="Christopher Grabski">
+            <img class="contribution-pic" src="images/steve.jpg" alt="Stephen Hanzlik">
+            <img class="contribution-pic" src="images/keegan.jpg" alt="Keegan Ridgley">
+            <img class="contribution-pic" src="images/tom.jpg" alt="Thomas Sarkisian">
+            </div>
+          </div>
+          <div class="col-sm-3">
+          </div>
+        </div>
+        <div class="row info-row">
           <div class="col-sm-3">
           </div>
           <div class="black-text info col-sm-6">
-            <h2>Github</h2>
+            <img class="attribution-pic" src="images/github-icon.svg" alt="github icon">
             <p><a href="https://github.com/StephenHanzlik/q2pi">Link to the github repository</a></p>
           </div>
           <div class="col-sm-3">
