--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,17 @@
 </head>
 
 <body>
+      <div class="bg">
+      </div>
       <div class="jumbotron">
-          <div class="opacity-div">
+          <!-- <div class="opacity-div"> -->
               <h1 id="landing-h1">Welcome to EggPi</h1>
               <p>A private network file sharing service</p>
               <p><a class="btn btn-primary btn-lg center" href="signin.html" role="button">Sign In</a></p>
               <div class="egg-img-div">
                   <img id="eggImg" src="images/egg.png">
               </div>
-          </div>
+          <!-- </div> -->
       </div>
       <div class="container">
         <div class="row info-row">
@@ -68,6 +70,8 @@
       <div>Icons made by <a href="http://www.flaticon.com/authors/nikita-golubev" title="Nikita Golubev">Nikita Golubev</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </div>
   </div>
+  <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
+  <script src="js/index-parallax.js"></script>
 </body>
 
 </html>
