improved styling on hover for github icons and contributors

--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,11 @@
           </div>
           <div class="black-text  info col-sm-6">
             <h2>Contributors</h2>
-            <div class = "contributors">
-            <a href="https://www.linkedin.com/in/christopher-grabski-7a2a4581"><img class="contribution-pic" src="images/chris.jpg" alt="Christopher Grabski"></a>
-            <a href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122"><img class="contribution-pic" src="images/steve.jpg" alt="Stephen Hanzlik"></a>
-            <a href="https://www.linkedin.com/in/keeganridgley"><img class="contribution-pic" src="images/keegan.jpg" alt="Keegan Ridgley"></a>
-            <a href="https://th.linkedin.com/in/thomas-sarkisian-337a8818"><img class="contribution-pic" src="images/tom.jpg" alt="Thomas Sarkisian"></a>
+            <div class ="contributors">
+            <a href="https://www.linkedin.com/in/christopher-grabski-7a2a4581"><img class="contribution-pic hvr-grow-shadow" src="images/chris.jpg" alt="Christopher Grabski"></a>
+            <a href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122"><img class="contribution-pic hvr-grow-shadow" src="images/steve.jpg" alt="Stephen Hanzlik"></a>
+            <a href="https://www.linkedin.com/in/keeganridgley"><img class="contribution-pic hvr-grow-shadow" src="images/keegan.jpg" alt="Keegan Ridgley"></a>
+            <a href="https://th.linkedin.com/in/thomas-sarkisian-337a8818"><img class="contribution-pic hvr-grow-shadow" src="images/tom.jpg" alt="Thomas Sarkisian"></a>
             </div>
           </div>
           <div class="col-sm-3">
@@ -52,7 +52,7 @@
           <div class="col-sm-3">
           </div>
           <div class="black-text info col-sm-6">
-            <a href="https://github.com/StephenHanzlik/q2pi"><img class="attribution-pic" src="images/github-icon.svg" alt="github icon"></a>
+            <a href="https://github.com/StephenHanzlik/q2pi"><img class="attribution-pic hvr-grow-shadow" src="images/github-icon.svg" alt="github icon"></a>
             <!-- <p><a href="https://github.com/StephenHanzlik/q2pi">Link to the github repository</a></p> -->
           </div>
           <div class="col-sm-3">
