--- a/public/index.html
+++ b/public/index.html
@@ -62,12 +62,11 @@
         </div>
     </div>
   <div class="row">
+    <div class="attribution-parent">
     <div class="attribution-text col-sm-6">
       <div>Icons made by <a href="http://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
       <br>
     </div>
-    <div class="attribution-text col-sm-6">
-      <div>Icons made by <a href="http://www.flaticon.com/authors/nikita-golubev" title="Nikita Golubev">Nikita Golubev</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
     </div>
   </div>
   <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
