--- a/public/signin.html
+++ b/public/signin.html
@@ -16,6 +16,7 @@
 <body>
   <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
     <h1 class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
+    <img class="egg-nav" src="images/egg.png">
   </nav>
     <div class="container">
 
