fixed sign up text color in header

--- a/public/signup.html
+++ b/public/signup.html
@@ -16,7 +16,7 @@
 
 <body>
   <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
-    <h1 class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
+    <h1 id="nav-text-white" class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
     <img class="egg-nav" src="images/egg.png">
   </nav>
 
