added prelimanary admin route verification and changed user landing to have delete column

--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -24,6 +24,7 @@
                         <th>Name</th>
                         <th>Username</th>
                         <th>Date Uploaded</th>
+                        <th class="delete-button">Delete</th>
                     </tr>
                 </thead>
                 <tbody id="table">
