add ability to grab file string

--- a/public/user-landing-admin.html
+++ b/public/user-landing-admin.html
@@ -24,7 +24,7 @@
                         <th>Name</th>
                         <th>Username</th>
                         <th>Date Uploaded</th>
-                        <th class="delete-button">Delete</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody id="table">
@@ -39,7 +39,7 @@
     <!-- /container -->
     <script type="text/javascript" src="js/vendors/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/index-admin.js"></script>
 </body>
 
 </html>
