add login redirect for dinkydinky

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
           <!-- <div class="opacity-div"> -->
               <h1 id="landing-h1">Welcome to EggPi</h1>
               <p>A private network file sharing service</p>
-              <p><a id="access-site-btn" class="btn btn-primary btn-lg center" href="user-landing.html" role="button">Continue to site</a></p>
+              <p><a id="access-site-btn" class="btn btn-primary btn-lg center" href="landing" role="button">Continue to site</a></p>
               <div class="egg-img-div">
                   <img id="eggImg" src="images/egg.png">
               </div>
@@ -71,7 +71,6 @@
   </div>
   <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
   <script src="js/index-parallax.js"></script>
-  <script src="js/index-sign-in-redirect.js"></script>
 
 </body>
 
