styling on landing with images and young eggbert

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,10 @@
           </div>
           <div class="black-text info col-sm-6">
             <h2>About EggPi</h2>
-            <p>EggPi is a site designed to allow users to easily share files with eachother locally, without reqiuring an internet connection. using a raspberry pi.</p>
+            <p>EggPi is a file sharing system based on node.js, designed to allow users to easily share and stream files with eachother locally. EggPi does not reqiure an internet connection and utilizes a Raspberry Pi for file storage and local network wifi for content distribution.</p>
+            <img class="egg-load" src="images/eggLoad.jpeg" alt="EggPi Loading Screen ">
+            <p>An Arduino lcd sheild is used to provide user feedback to administrators. The user login event and the accosiated user email is graphically displayed for the Administrator.</p>
+            <img class="egg-load" src="images/eggLog.JPG" alt="EggPi Loading Screen ">
           </div>
           <div class="col-sm-3">
           </div>
@@ -39,12 +42,19 @@
           <div class="col-sm-3">
           </div>
           <div class="black-text  info col-sm-6">
-            <h2>Contributors</h2>
+            <h2>Contact Our Team</h2>
             <div class ="contributors">
             <a href="https://www.linkedin.com/in/christopher-grabski-7a2a4581"><img class="contribution-pic hvr-grow-shadow" src="images/chris.jpg" alt="Christopher Grabski"></a>
             <a href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122"><img class="contribution-pic hvr-grow-shadow" src="images/steve.jpg" alt="Stephen Hanzlik"></a>
+
             <a href="https://www.linkedin.com/in/keeganridgley"><img class="contribution-pic hvr-grow-shadow" src="images/keegan.jpg" alt="Keegan Ridgley"></a>
             <a href="https://th.linkedin.com/in/thomas-sarkisian-337a8818"><img class="contribution-pic hvr-grow-shadow" src="images/tom.jpg" alt="Thomas Sarkisian"></a>
+            </div>
+            <h2>Project Manager</h2>
+            <div class="row info-row">
+              <a href="https://github.com/StephenHanzlik/q2pi">
+                <img class="attribution-pic hvr-grow-shadow" src="images/rsz_1eggcrop.jpg" alt="Project Manager">
+              </a>
             </div>
           </div>
           <div class="col-sm-3">
@@ -54,6 +64,7 @@
           <div class="col-sm-3">
           </div>
           <div class="black-text info col-sm-6">
+            <h2>Git Hub</h2>
             <a href="https://github.com/StephenHanzlik/q2pi"><img class="attribution-pic hvr-grow-shadow" src="images/github-icon.svg" alt="github icon"></a>
             <!-- <p><a href="https://github.com/StephenHanzlik/q2pi">Link to the github repository</a></p> -->
           </div>
