finilazed landing styling

--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,12 @@
           </div>
           <div class="black-text info col-sm-6">
             <h2>About EggPi</h2>
-            <p>EggPi is a file sharing system based on node.js, designed to allow users to easily share and stream files with eachother locally. EggPi does not reqiure an internet connection and utilizes a Raspberry Pi for file storage and local network wifi for content distribution.</p>
-            <img class="egg-load" src="images/eggLoad.jpeg" alt="EggPi Loading Screen ">
-            <p>An Arduino lcd sheild is used to provide user feedback to administrators. The user login event and the accosiated user email is graphically displayed for the Administrator.</p>
-            <img class="egg-load" src="images/eggLog.JPG" alt="EggPi Loading Screen ">
+            <p>EggPi is a DIY file sharing system based on RasperryPi, Node.js, PSQL, openWRT, and open source technologies.  EggPi is designed to allow users to easily and securely share and stream files across a secure wireless LAN.  Users share communal permisions to upload, download, and stream files.   The SysOp is authorized to edit hardware and software configurations, while an admin account is required to delete media from communal uploads.</p>
+            <img class="egg-load pic-margin" src="images/eggLoad.jpeg" alt="EggPi Loading Screen ">
+            <p>An Arduino LCD sheild is used to provide user feedback to SysOp. The user login event and the associated user email is graphically displayed for instant network monotoring.</p>
+            <img class="egg-load pic-margin pic-center" src="images/login-test.JPG" alt="EggPi Loading Screen ">
+            <p>EggPi utilizes UPnP protocol in order to stream content from our miniDLNA server to any UPnP client.  Our recomended UPnP media player is VLC.  Accessing EggPi is as easy as connecting to the EGGNOGG server under the Local Network options.</p>
+            <img class="egg-load egg-nogg" src="images/EGGNOG.png" alt="EggPi Loading Screen ">
           </div>
           <div class="col-sm-3">
           </div>
@@ -46,14 +48,13 @@
             <div class ="contributors">
             <a href="https://www.linkedin.com/in/christopher-grabski-7a2a4581"><img class="contribution-pic hvr-grow-shadow" src="images/chris.jpg" alt="Christopher Grabski"></a>
             <a href="https://www.linkedin.com/in/stephen-hanzlik-14b71b122"><img class="contribution-pic hvr-grow-shadow" src="images/steve.jpg" alt="Stephen Hanzlik"></a>
-
             <a href="https://www.linkedin.com/in/keeganridgley"><img class="contribution-pic hvr-grow-shadow" src="images/keegan.jpg" alt="Keegan Ridgley"></a>
             <a href="https://th.linkedin.com/in/thomas-sarkisian-337a8818"><img class="contribution-pic hvr-grow-shadow" src="images/tom.jpg" alt="Thomas Sarkisian"></a>
             </div>
             <h2>Project Manager</h2>
             <div class="row info-row">
               <a href="https://github.com/StephenHanzlik/q2pi">
-                <img class="attribution-pic hvr-grow-shadow" src="images/rsz_1eggcrop.jpg" alt="Project Manager">
+                <img class="attribution-pic hvr-grow-shadow" src="images/rsz_eggcrop.jpg" alt="Project Manager">
               </a>
             </div>
           </div>
@@ -75,6 +76,7 @@
   <div class="row">
     <div class="attribution-parent">
     <div class="attribution-text col-sm-6">
+      <div>Copyright 2016 EggPi</div>
       <div>Icons made by <a href="http://www.flaticon.com/authors/roundicons" title="Roundicons">Roundicons</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
       <br>
     </div>
