--- a/public/signup.html
+++ b/public/signup.html
@@ -16,8 +16,15 @@
 
 <body>
   <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
-    <h1 id="nav-text-white" class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
-    <img class="egg-nav" src="images/egg.png">
+    <div class="col-md-6">
+      <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
+    </div>
+    <div  class="nav-links col-md-6">
+      <ul>
+        <li><h1><a href="get_eggs.html">Upload Eggs |</a></h1></li>
+        <li><h1><a id="signout-btn" href="get_eggs.html">Sign out |</a></h1></li>
+      </ul>
+    </div>
   </nav>
 
     <div class="container">
@@ -51,6 +58,8 @@
     <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/vendors/toastr.min.js"></script>
     <script src="js/signup.js"></script>
+    <script type="text/javascript" src="js/signout.js"></script>
+
 
 </body>
 
