--- a/public/user-landing-admin.html
+++ b/public/user-landing-admin.html
@@ -13,8 +13,15 @@
 
 <body>
   <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
-    <h1 class="col-md-8"><a href="index.html">EGGPiFS</a> | Egg Pi File Storage</h1>
-    <h1 class=" upload-nav col-md-4"><a href="get_eggs.html">Upload Eggs <img id="egg-upload" src="images/egg.png"></a></h1>
+    <div class="col-md-6">
+      <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
+    </div>
+    <div  class="nav-links col-md-6">
+      <ul>
+        <li><h1><a href="get_eggs.html">Upload Eggs |</a></h1></li>
+        <li><h1><a id="signout-btn" href="get_eggs.html">Sign out |</a></h1></li>
+      </ul>
+    </div>
   </nav>
     <div class="container table-parent">
         <div class="signup-container scroll col-md-6">
@@ -40,6 +47,7 @@
     <script type="text/javascript" src="js/vendors/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/index-admin.js"></script>
+    <script type="text/javascript" src="js/signout.js"></script>
 </body>
 
 </html>
