--- a/public/user-landing.html
+++ b/public/user-landing.html
@@ -15,19 +15,13 @@
   <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
     <div class="col-md-6">
       <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
-
     </div>
-    <!-- <div class="col-md-3"> -->
-    <!-- </div> -->
     <div  class="nav-links col-md-6">
       <ul>
         <li><h1><a href="get_eggs.html">Upload Eggs |</a></h1></li>
-          <!-- </div> -->
-        <!-- <div  class="nav-links col-md-2"> -->
-        <li><h1><a href="get_eggs.html">Sign out |</a></h1></li>
+        <li><h1><a id="signout-btn" href="get_eggs.html">Sign out |</a></h1></li>
       </ul>
     </div>
-
   </nav>
     <div class="container table-parent">
         <div class="signup-container scroll col-md-6">
@@ -52,6 +46,7 @@
     <script type="text/javascript" src="js/vendors/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/signout.js"></script>
 </body>
 
 </html>
