updated user laning with log in picture

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,9 @@
             <p>EggPi is a DIY file sharing system based on RasperryPi, Node.js, PSQL, openWRT, and open source technologies.  EggPi is designed to allow users to easily and securely share and stream files across a secure wireless LAN.  Users share communal permisions to upload, download, and stream files.   The SysOp is authorized to edit hardware and software configurations, while an admin account is required to delete media from communal uploads.</p>
             <img class="egg-load pic-margin" src="images/eggLoad.jpeg" alt="EggPi Loading Screen ">
             <p>An Arduino LCD sheild is used to provide user feedback to SysOp. The user login event and the associated user email is graphically displayed for instant network monotoring.</p>
-            <img class="egg-load pic-margin pic-center" src="images/login-test.JPG" alt="EggPi Loading Screen ">
+            <img class="egg-load pic-margin pic-center" src="images/login-test.JPG" alt="EggPi User Login">
+            <img class="egg-load pic-margin pic-center" src="images/file-upload.JPG" alt="EggPi Upload Message">
+            <h2>Streaming Content</h2>
             <p>EggPi utilizes UPnP protocol in order to stream content from our miniDLNA server to any UPnP client.  Our recomended UPnP media player is VLC.  Accessing EggPi is as easy as connecting to the EGGNOGG server under the Local Network options.</p>
             <img class="egg-load egg-nogg" src="images/EGGNOG.png" alt="EggPi Loading Screen ">
           </div>
