added link for manager

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
             </div>
             <h2>Project Manager</h2>
             <div class="row info-row">
-              <a href="https://github.com/StephenHanzlik/q2pi">
+              <a href="https://www.boulderhumane.org/animals/adoption/dogs">
                 <img class="attribution-pic hvr-grow-shadow" src="images/rsz_eggcrop.jpg" alt="Project Manager">
               </a>
             </div>
