attempt to secure uploads link on sign in page

--- a/public/signin.html
+++ b/public/signin.html
@@ -60,6 +60,7 @@
     <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/vendors/toastr.min.js"></script>
     <script src="js/signin.js"></script>
+    <script type="text/javascript" src="js/upload-link.js"></script>
     <script type="text/javascript" src="js/signout.js"></script>
 
 
