secure upload link on sign up and sign in page

--- a/public/signup.html
+++ b/public/signup.html
@@ -21,7 +21,7 @@
     </div>
     <div  class="nav-links col-md-6">
       <ul>
-        <li><h1><a href="get_eggs.html">Upload Eggs |</a></h1></li>
+        <li><h1><a href="get_eggs.html" class="upload-link-btn">Upload Eggs |</a></h1></li>
         <li><h1><a id="signout-btn" href="get_eggs.html">Sign out |</a></h1></li>
       </ul>
     </div>
@@ -58,6 +58,7 @@
     <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/vendors/toastr.min.js"></script>
     <script src="js/signup.js"></script>
+    <script type="text/javascript" src="js/upload-link.js"></script>
     <script type="text/javascript" src="js/signout.js"></script>
 
 
