--- a/public/signin.html
+++ b/public/signin.html
@@ -20,7 +20,7 @@
     </div>
     <div  class="nav-links col-md-6">
       <ul>
-        <li><h1><a href="get_eggs.html" id="upload-link-btn">Upload Eggs |</a></h1></li>
+        <li><h1><a href="get_eggs.html" class="upload-link-btn">Upload Eggs |</a></h1></li>
         <li><h1><a href="get_eggs.html" id="signout-btn">Sign out |</a></h1></li>
       </ul>
     </div>
