html files have favicon links to egg.png

--- a/public/user-landing-admin.html
+++ b/public/user-landing-admin.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
     <link href="css/style.css" rel="stylesheet">
-
+    <link rel="icon" type="image/png" href="images/egg.png" />
     <title>User Landing Page Administrator</title>
 </head>
 
