--- a/public/get_eggs.html
+++ b/public/get_eggs.html
@@ -8,7 +8,7 @@
   <title>File Uploader</title>
   <!-- <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'> -->
   <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
-
+  <link rel="icon" type="image/png" href="images/egg.png" />
   <link href="css/style.css" rel="stylesheet">
 
 </head>
