--- a/public/signin.html
+++ b/public/signin.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/vendors/toastr.min.css">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/vendors/toastr.min.css">
+    <link rel="icon" type="image/png" href="images/egg.png" />
 
     <title>sign-in page</title>
 </head>
