--- a/public/signup.html
+++ b/public/signup.html
@@ -8,7 +8,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="css/vendors/bootstrap.min.css">
     <link rel="stylesheet" href="css/vendors/toastr.min.css">
-
+    <link rel="icon" type="image/png" href="images/egg.png" />
 
 
     <title>sign-up page</title>
