--- a/public/get_eggs.html
+++ b/public/get_eggs.html
@@ -40,6 +40,17 @@
     </div>
   </div>
 
+<input type="file" id="file-input">
+<p id="status">Please select a file</p>
+<img id="preview" src="/images/default.png">
+
+<form method="POST" action="/save-details">
+  <input type="hidden" id="avatar-url" name="avatar-url" value="/images/default.png">
+  <input type="text" name="username" placeholder="Username"><br>
+  <input type="text" name="full-name" placeholder="Full name"><br><br>
+  <input type="submit" value="Update profile">
+</form>
+
 
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
   <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
