--- a/public/get_eggs.html
+++ b/public/get_eggs.html
@@ -41,7 +41,7 @@
   </div>
 
 
-  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script type="text/javascript" src="/js/vendors/jquery-3.1.1.min.js"></script>
   <script type="text/javascript" src="js/vendors/bootstrap.min.js"></script>
   <script src="js/upload.js"></script>
   <script type="text/javascript" src="js/signout.js"></script>
