--- a/public/signin.html
+++ b/public/signin.html
@@ -26,6 +26,21 @@
     </div>
   </nav>
     <div class="container">
+      <div id="welcome-modal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+          <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content" id="welcome-modal-background">
+                  <div class="modal-body">
+                      <div class="row">
+                          <div class="col-md-12">
+                              <img src="images/magic_word.gif" alt="you didn't say the magic word">
+                              <section id="demo_voices_player"></section>
+                          </div>
+                      </div>
+                      <br>
+                  </div>
+              </div>
+          </div>
+      </div>
 
         <div class="signin-container">
 
