--- a/public/signin.html
+++ b/public/signin.html
@@ -15,17 +15,30 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-fixed-top" style="background-color: rgb(0, 0, 0);">
-        <div class="col-md-6">
-            <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
-        </div>
-        <div class="nav-links col-md-6">
-            <ul>
-                <li>
-                    <h1><a href="get_eggs.html" id="signout-btn">Sign out |</a></h1></li>
-            </ul>
-        </div>
-    </nav>
+  <nav class="navbar navbar-inverse navbar-static-top main-nav" role="navigation">
+      <div class="container">
+          <div class="navbar-header">
+              <div>
+                  <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
+              </div>
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse">
+                  <span class="sr-only">Toggle navigation</span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+                  <span class="icon-bar"></span>
+              </button>
+          </div>
+
+          <div class="collapse navbar-collapse" id="nav-collapse">
+              <ul class="nav navbar-nav">
+                  <li>
+                      <a id="signout-btn" href="get_eggs.html">Sign out |</a>
+                  </li>
+
+              </ul>
+          </div>
+      </div>
+  </nav>
     <div class="container">
         <div id="welcome-modal" class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
             <div class="modal-dialog modal-lg" role="document">
