center the logo on mobile screen sizes

--- a/public/signup.html
+++ b/public/signup.html
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-inverse navbar-static-top main-nav" role="navigation">
       <div class="container">
           <div class="navbar-header">
-              <div class='top-logo'>
+              <div class="top-logo">
                   <h1><a href="index.html">EggPi </a>| File Sharing <img id="egg-logo" src="images/egg.png"></h1>
               </div>
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-collapse">
